fix ul spacing (due to <p> margin-top change)
Staged at:
http://kathyw-format.dart-lang.appspot.com/docs/spec/

(Compare to:
http://2012-03-13.dart-lang.appspot.com/docs/spec/)

BUG=
TEST=

Review URL: https://chromereviews.googleplex.com/4118018

--- a/src/site/css/style.css
+++ b/src/site/css/style.css
@@ -299,7 +299,7 @@ article p {
   font-weight: 400;
 }
 
-article ol {
+article ol, article ul {
   margin-bottom: 10px;
 }
 
